Update the icons for windows in the Windows mainMenu

Haven't actually gotten this to work yet :/

Failed experiments

Bug: 766897
Change-Id: I041369648a05cfa3dbc6ee0da21583d8f6c7148b